# asmr_flappy_bevy

./: Cargo.toml  readme.md
src/: constant.rs  lib.rs  main.rs
src/components/: game.rs  mask.rs  mod.rs  on.rs  resize.rs  timer.rs
src/events/: game.rs  mod.rs  picking.rs
src/ffi/: desktop.rs  mod.rs
src/plugins/: app.rs  assets.rs  game.rs  inspector.rs  mask.rs  menu.rs  mod.rs  resize.rs
src/resources/: assets.rs  game.rs  mod.rs  resize.rs
src/states/: mod.rs  my_states.rs
src/systems/: assets.rs  bird.rs  ground.rs  mask.rs  mod.rs  on_game.rs  on_menu.rs  on_result.rs  pipe.rs  resize.rs  score.rs
