[package]
name = "asmr_flappy_bevy"
version = "0.1.0"
edition = "2021"

[features]
default = ["inspector"]
inspector = ["bevy-inspector-egui", "iyes_perf_ui"]

[dependencies]
bevy = "0.14.1"
bevy-inspector-egui = { version = "0.25.2", optional = true }
bevy_asset_loader = "0.21.0"
iyes_perf_ui = { version = "0.3.0", optional = true }
