[package]
name = "asmr_flappy_bevy"
version = "0.1.0"
edition = "2021"

[features]
default = ["inspector"]
inspector = ["bevy-inspector-egui", "iyes_perf_ui"]

[dependencies]
avian2d = "0.1.2"
bevy = "0.14.1"
bevy-inspector-egui = { version = "0.25.2", optional = true }
bevy_asset_loader = "0.21.0"
bevy_mod_picking = "0.20.1"
bevy_tweening = "0.11.0"
iyes_perf_ui = { version = "0.3.0", optional = true }
rand = "0.8.5"
